# League-Auto-Accept

./: .gitignore  CMakeLists.txt  LICENSE  README.md
resources/: app_manifest.xml  create_icon.py  resource.h  resources.rc  simple_icon.py
src/: application.cpp  config_manager.cpp  lcu_client.cpp  league_auto_accept.cpp  league_auto_accept_gui.cpp  main.cpp  system_tray.cpp  ui_automation.cpp
src/models/: gameflow_state.cpp  lcu_connection_info.cpp  performance_metrics.cpp  system_tray_state.cpp
src/utils/: logger.cpp  process_monitor.cpp
